# sint-ua-v2.1

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: sint-critic.md  sint-main.md  sint-router.md  sint-scribe.md
commands/: dashboard.md  memory.md  session-end.md  session-start.md  verify.md
docs/: index.html
mcp/sint-memory/: README.md  server.py
memory/: migrate_state.py  state.json
memory/sessions/: 2026-07-14a.jsonl
plugin/: sint-hooks.ts
skills/: AGENTS.MD  INDEX.MD
skills/agents/: SKILL.md
skills/dso/: SKILL.md
skills/memory-system/: SKILL.md
skills/owner/: SKILL.md
skills/state/: SKILL.md
skills/wiki/: SKILL.md
